--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@nextui-org/button": "^2.0.37",
 		"@nextui-org/code": "^2.0.32",
 		"@nextui-org/divider": "^2.0.31",
+		"@nextui-org/image": "^2.0.31",
 		"@nextui-org/input": "2.2.2",
 		"@nextui-org/kbd": "2.0.30",
 		"@nextui-org/link": "^2.0.34",
@@ -27,7 +28,7 @@
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
-		"next": "14.2.4",
+		"next": "^14.2.5",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
