--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"react-responsive": "^10.0.0"
 	},
 	"devDependencies": {
+		"@next/eslint-plugin-next": "^14.2.5",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
