--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@nextui-org/button": "^2.0.37",
+		"@nextui-org/card": "^2.0.33",
 		"@nextui-org/code": "^2.0.32",
 		"@nextui-org/divider": "^2.0.31",
 		"@nextui-org/image": "^2.0.31",
